{
    "@@locale": "en",
    "postsFeedAppBarTitle": "Welcome back",
    "@postsFeedAppBarTitle": {
        "description": "Text shown in the AppBar of the PostsFeed Page"
    },
    "welcomeOnboarding": "Welcome to our app",  
    "postsFeed": "Posts feed",
    "settings": "Settings",
    "allUsers": "All users",
    "allPosts": "All posts",
    "comments": "Comments",
    "shares": "Shares",
    "createPost": "Create post",
    "updatePost": "Update post",
    "hidePost": "Hide post",
    "deletePost": "Delete post",
    "acceptPost": "Accept post",
    "rejectPost": "Reject post",
    "noPostsAvailable": "No posts available",
    "noUsersAvailable": "No users available",
    "banUser": "Ban user",
    "unBanUser": "Unban user",
    "create": "Create",
    "update": "Update",
    "login": "Login",
    "logout": "Logout",
    "reviewedBy": "Reviewed By",
    "settingsLightThemeModeButton": "Light theme mode",
    "settingsDarkThemeModeButton": "Dark theme mode",
    "chooseTheme": "Choose theme mode",
    "chooseLanguage": "Choose your language",
    "settingsArabicButton": "Arabic",
    "settingsEnglishButton": "English",
    "currentUserProfile": "My profile",
    "fieldMustNotBeEmpty": "Field must not be empty",
    "formFieldLabel": "What are your thoughts ?",
    "pending": "Pending",
    "accepted": "Accepted",
    "rejected": "Rejected",
    "users": "Users",
    "bannedUsers": "Banned users",
    "addImage":"Add Image",
    "addForm":"Add Form",
    "reset":"Reset",
    "clearContent":"Clear Content"
}