...

  List<UserDto> users = [
      UserDto(
        userInfo: UserInfo(
          id: '3',
          imageUrl: 'assets/avatar.jpg',
          name: 'Saif',
        ),
        isBanned: true,
      ),
      UserDto(
        userInfo: UserInfo(
          id: '4',
...
