{
    "@@locale": "ar",
    "postsFeedAppBarTitle": "اهلا بعودتك يا",
    "@postsFeedAppBarTitle": {
        "description": "النص المعروض في شريط البرنامج الخاص بصفحة المنشورات"
    },
    "welcomeOnboarding": "اهلا بك في تطبيقنا", 
    "postsFeed": "المنشورات",
    "settings": "الاعدادات",
    "allUsers": "جميع المستخدمين",
    "allPosts": "جميع المنشورات",
    "comments": "التعليقات",
    "shares": "المشاركات",
    "createPost": "انشأ منشور",
    "updatePost": "تحديث المنشور",
    "hidePost": "اخفاء المنشور",
    "deletePost": "حذف المنشور",
    "acceptPost": "قبول المنشور",
    "rejectPost": "رفض المنشور",
    "noPostsAvailable": "لا يوجد منشورات",
    "noUsersAvailable": "لا يوجد مستخدمين",
    "banUser": "حظر المستخدم",
    "unBanUser": "الغاء حظر المستخدم",
    "create": "أنشاء",
    "update": "تحديث",
    "login": "تسجيل الدخول",
    "logout": "تسجيل الخروج",
    "reviewedBy": "تمت مراجعته بواسطة",
    "settingsLightThemeModeButton": "الوضع المضئ",
    "settingsDarkThemeModeButton": "الوضع المظلم",
    "chooseTheme": "اختر الوضع المناسب",
    "chooseLanguage": "اختر لغتك",
    "settingsArabicButton": "اللغة العربية",
    "settingsEnglishButton": "اللغة الانجليزية",
    "currentUserProfile": "حسابي",
    "fieldMustNotBeEmpty": "الحقل يجب ان لا يكون فارغا",
    "formFieldLabel": "بماذا تفكر ؟",
    "pending": "قيد الانتظار",
    "accepted": "مقبول",
    "rejected": "مرفوض",
    "users": "المستخدمين",
    "bannedUsers": "المستخدمين المحظورين",
    "addImage": "أضف صورة",
    "addForm": "أضف استمارة",
    "reset": " اعادة الضبط",
    "clearContent":"محو"
}